Fixed links while in visual studio code

--- a/Firebase/public/index.html
+++ b/Firebase/public/index.html
@@ -4,15 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Slim's Website</title>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <h1>Slim's Website</h1>
         </header>
         <nav>
-            <a href="/index.html">Homepage</a>
-            <a href="/gimkit-creative-guides.html">My Gimkit Creative Guides</a>
+            <a href="index.html">Homepage</a>
+            <a href="gimkit-creative-guides.html">My Gimkit Creative Guides</a>
         </nav>
         <main>
             <section id="welcome" class="section">
@@ -29,7 +29,7 @@
             </section>
         </main>
         <footer>
-            <script src="/copyright-info.js"></script>
+            <script src="copyright-info.js"></script>
             <div class="footer-separator">
                 <div id="left-footer">
                     <p id="copyright"></p>
