--- a/Firebase/public/gimkit-creative-guides.html
+++ b/Firebase/public/gimkit-creative-guides.html
@@ -4,25 +4,25 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>My Gimkit Creative Guides</title>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <h1>My Gimkit Creative Guides</h1>
         </header>
         <nav>
-            <a href="/index.html">Homepage</a>
-            <a href="/gimkit-creative-guides.html">My Gimkit Creative Guides</a>
+            <a href="index.html">Homepage</a>
+            <a href="gimkit-creative-guides.html">My Gimkit Creative Guides</a>
         </nav>
         <main>
             <div class="grid-container">
-                <a href="/guides/intro-to-compressing-blocks.html">
+                <a href="guides/intro-to-compressing-blocks.html">
                     <div class="grid-item">
                         <h2>Intro To Compressing Blocks</h2>
                         <p>If you create a block-intensive map, you will find that memory can add up quickly from the block limit. This guide will teach you how to reduce the number of blocks you use!</p>
                     </div>
                 </a>
-                <a href="/guides/unfinished/player-id.html">
+                <a href="guides/unfinished/player-id.html">
                     <div class="grid-item">
                         <h2>Converting Player ID to Time</h2>
                         <p>Work in progress. Also this guide selector layout may change and I may add pictures to these.</p>
@@ -32,7 +32,7 @@
 
         </main>
         <footer>
-            <script src="/copyright-info.js"></script>
+            <script src="copyright-info.js"></script>
             <div class="footer-separator">
                 <div id="left-footer">
                     <p id="copyright"></p>
